Add rowspawn and colspan

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <body>
     <h1>내가 좋아하는 영화 TOP 3</h1>
 
-   
-
     <p>
         다음은 제가 영화를 검색할 때 사용하는 사이트입니다. 해당 사이트를 누르면 접속이 가능합니다.
     </p>
@@ -20,10 +18,13 @@
     <table border="1">
         <caption>TOP 3 영화</caption>
         <tr>
-            <th>순위</th>
+            <th rowspan="2">순위</th>
+            <th colspan="2">영화 정보</th>
+            <th rowspan="2">명대사</th>
+        </tr>
+        <tr>
             <th>제목</th>
             <th>포스터</th>
-            <th>명대사</th>
         </tr>
         <tr>
             <td>1</td>
