LAB3 second commit

--- a/LAB3/index.html
+++ b/LAB3/index.html
@@ -21,30 +21,30 @@
       <section class="movie-card">
         <div class="movie-image">
           <img src="images/poster1.jpg" alt="New York, I Love You 포스터" />
+          <div class="movie-title">New York, I Love You</div>
         </div>
-        <div class="movie-text">
-          <h3>New York, I Love You</h3>
-          <p>Every moment... Love Begins.</p>
+        <div class="movie-description">
+          Every moment... Love Begins.
         </div>
       </section>
 
       <section class="movie-card">
         <div class="movie-image">
           <img src="images/poster2.jpg" alt="The Comedian 포스터" />
+          <div class="movie-title">The Comedian</div>
         </div>
-        <div class="movie-text">
-          <h3>The Comedian</h3>
-          <p>They lie, they cheat, they destroy... they even try to love</p>
+        <div class="movie-description">
+          They lie, they cheat, they destroy... they even try to love.
         </div>
       </section>
 
       <section class="movie-card">
         <div class="movie-image">
           <img src="images/poster3.jpg" alt="La Baie des Anges 포스터" />
+          <div class="movie-title">La Baie des Anges</div>
         </div>
-        <div class="movie-text">
-          <h3>La Baie des Anges</h3>
-          <p>A stirring journey into the nightmare of a woman possessed.</p>
+        <div class="movie-description">
+          A stirring journey into the nightmare of a woman possessed.
         </div>
       </section>
     </main>
