--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -125,7 +125,7 @@
       }
     }
 
-    fetch('product.json')
+    fetch('https://2024148031.github.io/HomeworkRepository/LAB4/product.json')
       .then(res => res.json())
       .then(data => {
         allMovies = data;
