--- a/LAB4/signup.html
+++ b/LAB4/signup.html
@@ -1,48 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>Signup</title>
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>회원가입</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div class="container">
-    <div class="top-link">
-      <a href="index.html">메인 페이지로 이동</a> | <a href="login.html">로그인 페이지로 이동</a>
-    </div>
-    <h2>회원가입</h2>
-    <form>
-      <label for="name">이름</label>
-      <input type="text" id="name" placeholder="이름을 입력하세요" required autocomplete="name" />
+  <div class="wrapper">
+    <nav class="nav">
+      <a href="index.html">메인 페이지</a>
+      <a href="login.html">로그인</a>
+      <a href="signup.html">회원가입</a>
+    </nav>
 
-      <label for="email">이메일</label>
-      <input type="email" id="email" placeholder="example@email.com" required autocomplete="email" />
-
-      <label for="password">비밀번호</label>
-      <input type="password" id="password" placeholder="비밀번호를 입력하세요" required />
-
-      <label for="age">나이</label>
-      <input type="number" id="age" placeholder="20" step="1" required autofocus />
-
-      <div class="radio-group">
-        <label>성별</label>
-        <input type="radio" name="gender" id="male" />
-        <label for="male">남</label>
-        <input type="radio" name="gender" id="female" />
-        <label for="female">여</label>
+    <div class="login-card">
+      <div class="top-link">
+        <a href="login.html">로그인 페이지로 이동</a>
       </div>
+      <h2>회원가입</h2>
+      <form action="#" method="post">
+        <label for="username">아이디</label>
+        <input type="text" id="username" name="username" required>
 
-      <label for="favorite">좋아하는 장르</label>
-      <select id="favorite">
-        <option>액션</option>
-        <option>로맨스</option>
-        <option>드라마</option>
-        <option>코미디</option>
-        <option>공포</option>
-      </select>
+        <label for="email">이메일</label>
+        <input type="email" id="email" name="email" required>
 
-      <button type="submit">가입하기</button>
-    </form>
+        <label for="password">비밀번호</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="gender">성별</label>
+        <select id="gender" name="gender">
+          <option value="male">남성</option>
+          <option value="female">여성</option>
+        </select>
+
+        <button type="submit">회원가입</button>
+      </form>
+    </div>
   </div>
 </body>
 </html>
