--- a/LAB4/login.html
+++ b/LAB4/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>로그인</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
   <div class="wrapper">
@@ -14,17 +13,17 @@
       <a href="signup.html">회원가입</a>
     </nav>
 
-    <div class="login-card">
+    <div class="container">
       <div class="top-link">
         <a href="signup.html">회원가입 페이지로 이동</a>
       </div>
       <h2>로그인</h2>
-      <form action="#" method="post">
-        <label for="username">아이디</label>
-        <input type="text" id="username" name="username" required>
+      <form>
+        <label for="email">이메일</label>
+        <input type="email" id="email" placeholder="이메일 입력" required />
 
         <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" placeholder="비밀번호 입력" required />
 
         <button type="submit">로그인</button>
       </form>
